# Chinese2Letters

./: CMakeLists.txt  README.md  draw.c  getChars.py  grid.c  main.c  plotdata
cmake-2.8.3/: CMakeCPackOptions.cmake  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestScript.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  cmake_uninstall.cmake
cmake-2.8.3/Bootstrap.cmk/: InitialCacheFlags.cmake  Makefile  cmConfigure.h
cmake-2.8.3/Bootstrap.cmk/cmsys/: Configure.h  Configure.hxx
cmake-2.8.3/Docs/: cmake.1  cmakecommands.1  cmakecompat.1  cmakemodules.1  cmakepolicies.1  cmakeprops.1  cmakevars.1  cpack.1  ctest.1
cmake-2.8.3/Source/: CTestTestfile.cmake  Makefile  cmConfigure.h  cmake_install.cmake
cmake-2.8.3/Source/kwsys/: CTestTestfile.cmake  Makefile  cmake_install.cmake  cmsysTestProcess  cmsysTestSharedForward  cmsysTestsC  cmsysTestsCxx  testSharedForward.c  testSystemTools.h
cmake-2.8.3/Tests/: CMakeBuildTest.cmake  CTestTestfile.cmake  CTestUpdateGIT.cmake  CTestUpdateHG.cmake  CTestUpdateSVN.cmake  EnforceConfig.cmake  Makefile  cmake_install.cmake
cmake-2.8.3/Tests/CMakeLib/: CMakeLibTests  CTestTestfile.cmake  Makefile  cmake_install.cmake  testXMLParser.h
cmake-2.8.3/Tests/CMakeTests/: CMakeMinimumRequiredTest.cmake  CTestTestfile.cmake  CompilerIdVendorTest.cmake  ConfigureFileTest.cmake  ELFTest.cmake  EndStuffTest.cmake  FileDownloadTest.cmake  FileTest.cmake  FindBaseTest.cmake  Makefile  MathTest.cmake  MessageTest.cmake  ModuleNoticesTest.cmake  StringTest.cmake  ToolchainTest.cmake  cmake_install.cmake
cmake-2.8.3/Tests/CTestConfig/: Debug-dashboard.cmake  Debug-script.cmake  MinSizeRel-dashboard.cmake  MinSizeRel-script.cmake  RelWithDebInfo-dashboard.cmake  RelWithDebInfo-script.cmake  Release-dashboard.cmake  Release-script.cmake
cmake-2.8.3/Utilities/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake-2.8.3/Utilities/Doxygen/: Makefile  (+2 more)
files/: database.c  database.h
src/: UI.c  UI.h  algorithm.c  algorithm.h  database.c  database.h  databaseTest.c  main.c  parser.c  parser.h
test/: databaseTest.c  plotdata2  tests.c
(+44 files in other folders)
